# argilla-streamlit

./: .gitignore  README.md  docker-compose.elasticsearch.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: sync-to-hub.yml
my_app/: __init__.py  _utils.py  debug.ipynb  introduction.py
my_app/pages/: autotrain-project.py  export-to-hub.py  guideline-and-comment-ability.py  no-code-data-manager.py  ui-record-creator.py  vector-annotator.py
my_app/pages/utils/: components.py
my_app/utils/: autotrain.py  commons.py
my_app/wip/: autotrain-project.py  vector-annotator.py
