[tool.poetry]
name = "argilla-streamlit"
version = "0.1.0"
description = "👑 Streamlit for extended UI functionalities for Argilla."
authors = ["david <david.m.berenstein@gmail.com>"]
readme = "README.md"
packages = [{include = "argilla_streamlit"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
spacy = "^3.5.0"
argilla = "^1.3.0"
streamlit = "^1.18.1"
streamlit-analytics = "^0.4.1"
watchdog = "^2.2.1"
text-highlighter = "^0.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
