[tool.poetry]
name = "argilla-streamlit"
version = "0.1.0"
description = "👑 Streamlit for extended UI functionalities for Argilla."
authors = ["david <david.m.berenstein@gmail.com>"]
readme = "README.md"
packages = [{include = "argilla_streamlit"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
pandas = "^1.5.3"
spacy = "^3.5.0"
argilla = "^1.3.0"
streamlit = "1.17.0"
streamlit-analytics = "^0.4.1"
watchdog = "^2.2.1"
text-highlighter = "^0.0.11"
datasets = "^2.9.0"
huggingface-hub = "^0.12.1"
streamlit-tags = "^1.2.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
